--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ regex = "1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 itertools = "0.10.1"
+fake = "2.4"
+rand = "0.8"
