--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+itertools = "0.10.1"
+fake = "2.4"
 lazy_static = "1.4.0"
+rand = "0.8"
 regex = "1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-itertools = "0.10.1"
-fake = "2.4"
-rand = "0.8"
+uuid = { version = "0.8", features = [ "v4"] }
