--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base16 = "0.2.1"
+base32 = "0.4.0"
 chrono = "0.4"
 itertools = "0.10.1"
 fake = "2.4"
