--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 base16 = "0.2.1"
 base32 = "0.4.0"
 chrono = "0.4"
+structopt = "0.3"
 itertools = "0.10.1"
 fake = "2.4"
 lazy_static = "1.4.0"
