--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,18 @@
 version: 2.1
+orbs:
+  slack: circleci/slack@3.4.0
+
 jobs:
   build:
+    environment:
+      SLACK_WEBHOOK: https://hooks.slack.com/services/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
     docker:
       - image: cimg/rust:1.57.0
     steps:
       - checkout
       - run: cargo fmt -- --check
       - run: cargo test
+      - store_test_results:
+          path: /tmp
+      - slack/notify-on-failure:
+          only_for_branches: main
