--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ edition = "2021"
 base16 = "0.2.1"
 base32 = "0.4.0"
 chrono = "0.4"
-structopt = "0.3"
 itertools = "0.10.1"
 fake = "2.4"
 lazy_static = "1.4.0"
+postgres = "0.19.2"
 rand = "0.8"
 regex = "1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+structopt = "0.3"
 uuid = { version = "0.8", features = [ "v4"] }
