adding 3 cross compile scripts

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 results.xml
 *.sql
 *.json
+
+anonymiser-aarch64-apple-darwin
+anonymiser-x86_64-unknown-linux-gnu
+anonymiser-x86_64-unknown-linux-musl
