--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,51 @@
 version: 2.1
+
+commands:
+  slack_notify_failure:
+    steps:
+      - slack/notify:
+          branch_pattern: main
+          event: fail
+          channel: 'engineering'
+          custom: |-
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*:fire: ${CIRCLE_USERNAME} broke the Anonymiser ${CIRCLE_JOB} job :fire:*\n\n${GIT_COMMIT_MSG}"
+                  },
+                  "accessory": {
+                    "type": "image",
+                    "image_url": "https://tenor.com/view/mochi-mochi-peach-cat-cat-kitty-animated-cry-gif-17774448",
+                    "alt_text": "images"
+                  }
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View Job"
+                      },
+                      "url": "${CIRCLE_BUILD_URL}"
+                    }
+                  ]
+                }
+              ]
+            }
+
 orbs:
-  slack: circleci/slack@3.4.0
+  slack: circleci/slack@4.5.1
+
+notify:
+  branches:
+    only:
+      - main
+
 
 jobs:
   test:
@@ -22,8 +67,7 @@ jobs:
       - store_artifacts:
           path: ./target/release/anonymiser
           destination: anonymiser
-      - slack/notify-on-failure:
-          only_for_branches: main
+      - slack_notify_failure
 
 workflows:
   version: 2.4
