remove old slack notif

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,7 @@ jobs:
     steps:
       - checkout
       - run: ./build
-      - slack/notify-on-failure:
-          only_for_branches: main
+      - slack_notify_failure
       - store_test_results:
           path: results.xml
   create-release:
