add to_csv function

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /target
 results.xml
 *.sql
+*.csv
 *.json
 
 anonymiser-aarch64-apple-darwin
+anonymiser-x86_64-apple-darwin
 anonymiser-x86_64-unknown-linux-gnu
 anonymiser-x86_64-unknown-linux-musl
