--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,8 @@ jobs:
   test:
     docker:
       - image: cimg/rust:1.62
+    environment:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - checkout
       - run: echo 'export GIT_COMMIT_MSG="$(git log --format=oneline -n 1 $CIRCLE_SHA1)"' >> $BASH_ENV
@@ -62,6 +64,8 @@ jobs:
   build_release:
     docker:
       - image: cimg/rust:1.62
+    environment:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - checkout
       - run: rustup target add x86_64-apple-darwin
