--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,9 +82,14 @@ jobs:
       - checkout
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       - run: cargo build --release --target=x86_64-apple-darwin
+      - run: rustup add aarch64-apple-darwin
+      - run: cargo build --release --target=aarch64-apple-darwin
       - store_artifacts:
           path: target/x86_64-apple-darwin/release/anonymiser
           destination: x86_64-apple-darwin
+      - store_artifacts:
+          path: target/aarch64-apple-darwin/release/anonymiser
+          destination: aarch64-apple-darwin
 
 workflows:
   version: 2.4
