try creating draft release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,8 @@ jobs:
       - attach_workspace:
           at: .
       - run: ls
-      - gh/install
-      # - run: gh release create "$CIRCLE_TAG" './anonymiser-x86_64-unknown-linux-gnu#General linux' './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
+      - gh/setup
+      - run: gh release create --draft -generate-notes "test" './anonymiser-x86_64-unknown-linux-gnu#General linux' './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
 
 workflows:
   version: 2.4
@@ -136,6 +136,7 @@ workflows:
       - create_release:
           context:
             - Default
+            - github-deployer
           requires:
             - test
             - build_release_linux
