--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ jobs:
       image: ubuntu-2004:2022.04.2
     environment:
     steps:
+      - checkout
       - attach_workspace:
           at: .
       - run: ls
