--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
     steps:
       - checkout
       - run: ./update_version v0.1.7
-      - run: apk add --no-cache git musl-dev
+      - run: apk add --no-cache git musl-dev bash
       - run: cargo build --release --target=x86_64-unknown-linux-musl
       - run: mv target/x86_64-unknown-linux-musl/release/anonymiser anonymiser-x86_64-unknown-linux-musl
       - persist_to_workspace:
