--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - checkout
-      - run: ./update_version v0.1.7
+      - run: ./update_version $CIRCLE_TAG
       - run: cargo build --release --target=x86_64-unknown-linux-gnu
       - run: mv target/x86_64-unknown-linux-gnu/release/anonymiser anonymiser-x86_64-unknown-linux-gnu
       - persist_to_workspace:
@@ -79,7 +79,7 @@ jobs:
     steps:
       - checkout
       - run: apk add --no-cache git musl-dev bash
-      - run: ./update_version v0.1.7
+      - run: ./update_version $CIRCLE_TAG
       - run: cargo build --release --target=x86_64-unknown-linux-musl
       - run: mv target/x86_64-unknown-linux-musl/release/anonymiser anonymiser-x86_64-unknown-linux-musl
       - persist_to_workspace:
@@ -94,7 +94,7 @@ jobs:
       CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - checkout
-      - run: ./update_version v0.1.7
+      - run: ./update_version $CIRCLE_TAG
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       - run: rustup target add aarch64-apple-darwin
       - run: cargo build --release --target=x86_64-apple-darwin
@@ -109,7 +109,7 @@ jobs:
 
   create_release:
     machine:
-      image: ubuntu-2004:2022.04.2
+      image: ubuntu-2204:current
     environment:
     steps:
       - checkout
@@ -118,7 +118,7 @@ jobs:
       - run: ls
       - gh/setup:
           version: 2.14.2
-      - run: gh release create --draft --generate-notes "v0.1.7" './anonymiser-x86_64-unknown-linux-gnu#General linux' './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
+      - run: gh release create --draft --generate-notes "$CIRCLE_TAG" './anonymiser-x86_64-unknown-linux-gnu#General linux' './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
 
 workflows:
   version: 2.4
@@ -128,15 +128,33 @@ workflows:
           context:
             - Default
 
+  release:
+      - test:
+          context:
+            - Default
+          filters: &filters-release
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
       - build_release_linux:
           context:
             - Default
+          filters:
+            <<: *filters-release
+
       - build_release_alpine:
           context:
             - Default
+          filters:
+            <<: *filters-release
+
       - build_release_macos:
           context:
             - Default
+          filters:
+            <<: *filters-release
 
       - create_release:
           context:
@@ -147,3 +165,5 @@ workflows:
             - build_release_linux
             - build_release_alpine
             - build_release_macos
+          filters:
+            <<: *filters-release
