adding integration test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - checkout
       - run: echo 'export GIT_COMMIT_MSG="$(git log --format=oneline -n 1 $CIRCLE_SHA1)"' >> $BASH_ENV
-      - run: ./test
+      - run: ./build_and_test
       - slack_notify_failure
       - store_test_results:
           path: results.xml
