--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ results.xml
 *.csv
 *.json
 
-!/test_files/*
+!/test_files/dump_file.sql
+!/test_files/strategy.json
 
 anonymiser-aarch64-apple-darwin
 anonymiser-x86_64-apple-darwin
