--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3"
 uuid = { version = "0.8", features = [ "v4"] }
+
+[dev-dependencies]
+pretty_assertions = "1.2.1"
