--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ chrono = "0.4"
 itertools = "0.10.1"
 fake = "2.4"
 lazy_static = "1.4.0"
-native-tls = "0.2.10"
+native-tls = { version = "0.2.10", features = ["vendored"] }
 postgres = "0.19.2"
 postgres-native-tls = "0.5.0"
 rand = { version = "0.8", features = ["small_rng"] }
