Alpine build: install pkg-config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
       PKG_CONFIG_ALL_STATIC: true
     steps:
       - checkout
-      - run: apk add --no-cache git musl-dev bash openssl-libs-static
+      - run: apk add --no-cache git musl-dev bash openssl-libs-static pkgconf
       - run: ./update_version $CIRCLE_TAG
       - run: cargo build --release --target=x86_64-unknown-linux-musl
       - run: mv target/x86_64-unknown-linux-musl/release/anonymiser anonymiser-x86_64-unknown-linux-musl
