--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,21 +64,6 @@ jobs:
       - store_test_results:
           path: results.xml
 
-  build_release_linux:
-    docker:
-      - image: cimg/rust:1.62
-    environment:
-      CARGO_NET_GIT_FETCH_WITH_CLI: true
-    steps:
-      - checkout
-      - run: ./update_version $CIRCLE_TAG
-      - run: cargo build --release --target=x86_64-unknown-linux-gnu
-      - run: mv target/x86_64-unknown-linux-gnu/release/anonymiser anonymiser-x86_64-unknown-linux-gnu
-      - persist_to_workspace:
-          root: .
-          paths:
-            - anonymiser-x86_64-unknown-linux-gnu
-
   build_release_alpine:
     docker:
       - image: clux/muslrust:1.62.1
@@ -126,7 +111,7 @@ jobs:
       - run: ls
       - gh/setup:
           version: 2.14.2
-      - run: gh release create --draft --generate-notes "$CIRCLE_TAG" './anonymiser-x86_64-unknown-linux-gnu#General linux' './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
+      - run: gh release create --draft --generate-notes "$CIRCLE_TAG" './anonymiser-x86_64-unknown-linux-musl#Alpine linux' './anonymiser-x86_64-apple-darwin#Intel Mac' './anonymiser-aarch64-apple-darwin#Apple silicon mac'
 
 workflows:
   version: 2.4
@@ -147,12 +132,6 @@ workflows:
             tags:
               only: /^v.*/
 
-      - build_release_linux:
-          context:
-            - Default
-          filters:
-            <<: *filters-release
-
       - build_release_alpine:
           context:
             - Default
@@ -171,7 +150,6 @@ workflows:
             - github-deployer
           requires:
             - test
-            - build_release_linux
             - build_release_alpine
             - build_release_macos
           filters:
