--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ chrono = "0.4"
 itertools = "0.10.1"
 fake = "2.4"
 lazy_static = "1.4.0"
-native-tls = "0.2.10"
+openssl = {version = "0.10.41", features = ["vendored"]}
 postgres = "0.19.2"
-postgres-native-tls = "0.5.0"
+postgres-openssl = "0.5.0"
 rand = { version = "0.8", features = ["small_rng"] }
 regex = "1"
 serde_json = "1.0"
